# zebrafish_jaw_segmentation

./: .gitattributes  .gitignore  README.md  config.yml  environment.yml  handover_todo.md  inference.sh  install_env.sh  mypy.ini  pyproject.toml  train_models.sh  userconf.yml
.github/workflows/: fast_tests.yml  format.yml  pylint.yml  system_tests.yml
data/: README.md  jaw_centres.csv
fishjaw/: README.md
fishjaw/density_analysis/: __init__.py  find_attachments.py
fishjaw/images/: io.py  metrics.py  transform.py
fishjaw/inference/: feature_selection.py  mesh.py  models.py  read.py
fishjaw/localisation/: data.py  model.py  plotting.py
fishjaw/model/: data.py  model.py
fishjaw/test/test_integration/: test_data.py  test_images.py  test_model.py
fishjaw/test/test_system/: test_create_model.py
fishjaw/transfer/: data.py  transfer_utils.py
fishjaw/util/: files.py  metadata.py  util.py
fishjaw/visualisation/: images_3d.py  plot_meshes.py  training.py
model/: jaw_loc_model.pth  paper_model.pkl
paper_diagrams/: net_diagram.tex  net_diagram2.tex  net_diagram3.tex  simplified.tex
scripts/: README.md  ablate_attention.py  arch_summary.py  check_loss.py  compare_segmentations.py  create_dicoms.py  explore_hyperparams.py  find_occupancy.py  find_rear_jaw_centres.py  inference_example.py  lines_of_code.py  mesh.py  plot_cropped.py  plot_dicoms.py  plot_hyperparams.py  plot_train_data.py  quadrate_transfer_learning.py  repeat_training_summary.py  train_jaw_locating_model.py  train_model.py
scripts/boring_scripts/: README.md  check_loss.py  copy_tifs.py  find_occupancy.py  find_rear_jaw_centres.py  fix_misaligned_tiffs_aaa.py  remove_layers.py  rotating_truth_images.py  train_lots_of_models.py  training_summary_stats.py  voxels.py
scripts/muscle_attachment_analysis/: find_muscle_attachments.ipynb  test.ipynb
scripts/notebooks/: example.ipynb  feature_selection.ipynb  localisation.ipynb  quadrate_transfer_learning.ipynb  radiomics_config.yaml
scripts/notebooks/feature_extraction/: feature_extraction.py  pyproject.toml
scripts/paper_scripts/: compare_slices.py  cubes.py  plot_3d_rearjaw.py
scripts/pipeline/: README.md  greyscale_boxplot.py  greyscale_plots.py  plot_3d.py  plot_slices.py  segment_jaws.py  shape_plots.py
tests/: README.md  check_loss.py
(+4 files in other folders)
